fix: hero image content overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ h5, h4, p {
     background: url('../images/beer-hero.webp');
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 500px;
+    height: 500px;
     position: relative;
     width: 100%;
 
